Fixed some contrasting issues & no background for mobile navigations

--- a/apps/website/src/app/pages/settings-page/settings-page.component.scss
+++ b/apps/website/src/app/pages/settings-page/settings-page.component.scss
@@ -19,5 +19,5 @@
 }
 
 .active {
-  box-shadow: 3px 1px 10px 3px #A0A0A0;
+  box-shadow: 2px 1px 8px 2px #444;
 }
